log/build_2023-06-14_10-10-18/open_cv/stdout_stderr.log
running egg_info
creating ../build/open_cv/open_cv.egg-info
writing ../build/open_cv/open_cv.egg-info/PKG-INFO
writing dependency_links to ../build/open_cv/open_cv.egg-info/dependency_links.txt
writing entry points to ../build/open_cv/open_cv.egg-info/entry_points.txt
writing requirements to ../build/open_cv/open_cv.egg-info/requires.txt
writing top-level names to ../build/open_cv/open_cv.egg-info/top_level.txt
writing manifest file '../build/open_cv/open_cv.egg-info/SOURCES.txt'
reading manifest file '../build/open_cv/open_cv.egg-info/SOURCES.txt'
writing manifest file '../build/open_cv/open_cv.egg-info/SOURCES.txt'
running build
running build_py
creating /home/pmlab/yueju2/build/open_cv/build
creating /home/pmlab/yueju2/build/open_cv/build/lib
creating /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/op.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/auto_center.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/6.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/4.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/x.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/__init__.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/a.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/2.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/image_detec.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/vergleich.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/image_processing.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
copying open_cv/auto_centering.py -> /home/pmlab/yueju2/build/open_cv/build/lib/open_cv
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/op.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/auto_center.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/6.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/4.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/x.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/__init__.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/a.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/2.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/image_detec.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/vergleich.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/image_processing.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
copying /home/pmlab/yueju2/build/open_cv/build/lib/open_cv/auto_centering.py -> /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/op.py to op.cpython-310.pyc
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/auto_center.py to auto_center.cpython-310.pyc
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/6.py to 6.cpython-310.pyc
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/4.py to 4.cpython-310.pyc
  File "/home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/4.py", line 31
    图像处理完了还要在回到原位置，除此以外需要从任意位置开始运动到指定点吗
                  ^
SyntaxError: invalid character '，' (U+FF0C)

byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/x.py to x.cpython-310.pyc
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/a.py to a.cpython-310.pyc
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/2.py to 2.cpython-310.pyc
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/image_detec.py to image_detec.cpython-310.pyc
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/vergleich.py to vergleich.cpython-310.pyc
byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/image_processing.py to image_processing.cpython-310.pyc
  File "/home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/image_processing.py", line 24
    这里面的不报位置吗     在这之前先看下 RETR_EXTERNAL mode
                                    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

byte-compiling /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv/auto_centering.py to auto_centering.cpython-310.pyc
running install_data
running install_egg_info
Copying ../build/open_cv/open_cv.egg-info to /home/pmlab/yueju2/install/open_cv/lib/python3.10/site-packages/open_cv-0.0.0-py3.10.egg-info
running install_scripts
Installing auto_centering script to /home/pmlab/yueju2/install/open_cv/lib/open_cv
Installing image_processing script to /home/pmlab/yueju2/install/open_cv/lib/open_cv
writing list of installed files to '/home/pmlab/yueju2/build/open_cv/install.log'
